[package]
name = "fmhy_downloader"
description = "fmhy_downloader is an application for downloading VODs off of freemediaheckyeah sites."
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/VOD-Downloaders/FMHY-Downloader"

[dependencies]
colored = "3.1"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
rand = "0.10"
url = { version = "2", features = ["serde"] }
chromiumoxide = "0.9"
futures = "0.3"
reqwest = { version = "0.13", features = ["blocking", "json"] }
symphonia = { version = "0.6", features = ["mkv", "isomp4"] }
